# llmipd

./: .coverage  .gitignore  README.md  anthropic_player.py  gpt_player.py  groq_player.py  llm_player.py  main.py  notebook.py  pyproject.toml  representative_strategies.py  requirements.txt
examples/: run_tournament.py
prompts/: README.md  explanation_ipd_prompt.txt  llm_player_prompt.md  simple_ipd_prompt.txt  simple_ipd_template.txt  system_prompt.txt
tests/: test_integration.py  test_llm_player.py
